# depup

./: Cargo.toml  Makefile  README.ja.md  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  lib.rs  main.rs  orchestrator.rs  package_manager.rs  progress.rs
src/domain/: dependency.rs  language.rs  mod.rs  summary.rs  update_result.rs  version_spec.rs
src/manifest/: cargo_toml.rs  composer_json.rs  detector.rs  gemfile.rs  go_mod.rs  gradle.rs  mod.rs  package_json.rs  pnpm_settings.rs  pyproject_toml.rs  writer.rs
src/output/: diff.rs  json.rs  mod.rs  text.rs
src/parser/: go.rs  java.rs  mod.rs  node.rs  php.rs  python.rs  ruby.rs  rust.rs
src/registry/: client.rs  crates_io.rs  go_proxy.rs  maven_central.rs  mod.rs  npm.rs  packagist.rs  pypi.rs  rubygems.rs
src/update/: filter.rs  mod.rs  version_info.rs
tests/: e2e_tests.rs  integration_tests.rs
