[package]
name = "depup"
version = "26.1.100"
edition = "2021"
description = "Multi-language dependency updater CLI tool"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
semver = "1"
thiserror = "2"
anyhow = "1"
regex = "1"
async-trait = "0.1"
indicatif = "0.18.3"
colored = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3.24.0"
