[package]
name = "depup"
version = "26.1.108"
edition = "2021"
authors = ["owayo <yoheiowa@gmail.com>"]
description = "Multi-language dependency updater CLI tool"
license = "MIT"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
semver = "1.0.27"
thiserror = "2.0.17"
anyhow = "1.0.100"
regex = "1.12.2"
async-trait = "0.1.89"
indicatif = "0.18.3"
colored = "3.0.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"
